--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,6 +26,7 @@ jobs:
         run: npx cypress run
 
       - name: Upload Mochawesome report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: mochawesome-report
